--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -21,7 +21,7 @@ Metadata:
           - ClusterNodeInstanceType
           - ClusterNodeMax
           - ClusterNodeMin
-          - ClusterNodeSize
+          - ClusterNodeVolumeSize
           - SynchronyClusterNodeMax
           - SynchronyClusterNodeMin
           - SynchronyNodeInstanceType
@@ -99,7 +99,7 @@ Metadata:
         default: Minimum number of cluster nodes
       ClusterNodeInstanceType:
         default: Cluster node instance type
-      ClusterNodeSize:
+      ClusterNodeVolumeSize:
         default: Cluster node instance volume size
       ConfluenceDownloadUrl:
         default: Confluence download URL
@@ -273,7 +273,7 @@ Parameters:
   ClusterNodeMin:
     Default: 1
     Type: Number
-  ClusterNodeSize:
+  ClusterNodeVolumeSize:
     Default: 50
     Description: Size of cluster node root volume in Gb (note - size based upon Application indexes x 4)
     Type: Number
@@ -1001,7 +1001,7 @@ Resources:
       BlockDeviceMappings:
         - DeviceName: /dev/xvda
           Ebs:
-            VolumeSize: !Ref ClusterNodeSize
+            VolumeSize: !Ref ClusterNodeVolumeSize
         - DeviceName: /dev/xvdf
           Ebs: {}
           NoDevice: true
