ITOPS-526 Make non-SSL the default for Tomcat settings

--- a/templates/JiraDataCenter.template.yaml
+++ b/templates/JiraDataCenter.template.yaml
@@ -475,7 +475,7 @@ Parameters:
     Description: Sets the protocol to handle incoming traffic
     Type: String
   TomcatProxyPort:
-    Default: 443
+    Default: 80
     Description: If this Connector is being used in a proxy configuration, configure this attribute to specify the server port to be returned for calls to request.getServerPort()
     Type: String
   TomcatRedirectPort:
@@ -483,12 +483,12 @@ Parameters:
     Description: The port number for Catalina to use when automatically redirecting a non-SSL connector actioning a redirect to a SSL URI
     Type: String
   TomcatScheme:
-    Default: https
+    Default: http
     Description: The name of the protocol you wish to have returned, ie "https" for an SSL Connector
     Type: String
     AllowedValues: [http, https]
   TomcatSecure:
-    Default: true
+    Default: false
     Description: Set this attribute to true if you wish to have calls to request.isSecure() to return true for requests received by this Connector. Needed for ssl offloading.
     Type: String
   VPC:
